tests/e2e/not_allowed/self.error
Error: syntax error in story at line 1, column 1

1|    self = 1
      ^^^^

E0030: `self` is reserved for future use
